argocd/app/bookstack/base/deployment.yaml
---
# Source: bookstack/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
  labels:
    helm.sh/chart: "bookstack"
    app.kubernetes.io/version: "25.2.0"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "bookstack"
    app.kubernetes.io/instance: "bookstack"
  annotations: { }
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: "bookstack"
      app.kubernetes.io/instance: "bookstack"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "bookstack"
        app.kubernetes.io/instance: "bookstack"
    spec:
      serviceAccountName: bookstack
      automountServiceAccountToken: true
      securityContext:
        runAsNonRoot: true
        fsGroup: 33
        runAsGroup: 33
        runAsUser: 33
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: bookstack
          image: "docker.io/solidnerd/bookstack:latest"
          imagePullPolicy: IfNotPresent
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          resources:
            limits:
              cpu: 1500m
              memory: 1532Mi
            requests:
              cpu: 200m
              memory: 100Mi
